[package]
name = "stwp"
description = "Tracker for Save the Web Project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = [
    "derive",
] }
serde_json = "1.0"
chrono = "0.4.38"
futures = "0.3.30"
